--- a/src/neutral/CMakeLists.txt
+++ b/src/neutral/CMakeLists.txt
@@ -1,7 +1,8 @@
 add_library(neutral OBJECT neutral.f90 atmos.f90 wind.f90)
 target_compile_options(neutral PRIVATE ${gfortran_opts})
 target_link_libraries(neutral PRIVATE config const reader pathlib grid meshobj interp mpimod
-hwm_ifc msis_ifc
+hwm_ifc
+msis_ifc
 timeutils
 inputdata neutraldata neutraldata3D
 neutraldata2D neutraldata2Dcart neutraldata2Daxisymm
@@ -17,9 +18,10 @@ $<TARGET_OBJECTS:grid> $<TARGET_OBJECTS:autogrid>
 $<TARGET_OBJECTS:neutral> $<TARGET_OBJECTS:interp>
 )
 target_include_directories(test_proj PRIVATE ${PROJECT_BINARY_DIR}/include)
-target_link_libraries(test_proj PRIVATE config const reader inputdata neutraldata neutraldata3D neutraldata2D neutraldata2Dcart neutraldata2Daxisymm
-timeutils pathlib mpimod const 
-hwm_ifc 
+target_link_libraries(test_proj PRIVATE config const reader inputdata
+neutraldata neutraldata3D neutraldata2D neutraldata2Dcart neutraldata2Daxisymm
+timeutils pathlib mpimod const
+hwm_ifc
 msis_ifc
 MPI::MPI_Fortran
 )
