libgemini3d: use target_sources for CMake < 3.21
Maybe due to enhancements in CMake >= 3.21? Normally target_link_libraries
is OK for object libraries and easier to use. However, maybe due
to complex/large list of objects, here target_sources worked for
CMake < 3.21.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -79,8 +79,10 @@ foreach(l ${gemini_internal_mods})
   EXPORT ${PROJECT_NAME}-targets
   )
 
+  target_sources(gemini3d PRIVATE $<TARGET_OBJECTS:${l}>)
+
   target_link_libraries(gemini3d
-  PRIVATE $<TARGET_OBJECTS:${l}>
+  # PRIVATE $<TARGET_OBJECTS:${l}>
   # $<BUILD_INTERFACE:${l}>
   $<INSTALL_INTERFACE:${l}>
   # ${l}
