--- a/src/ionization/CMakeLists.txt
+++ b/src/ionization/CMakeLists.txt
@@ -9,7 +9,7 @@ target_link_libraries(fang_run PRIVATE fang msis_ifc const)
 if(BUILD_TESTING)
 
 add_executable(test_fang test_fang.f90)
-target_link_libraries(test_fang PRIVATE fang fang_run assert const msis_ifc)
+target_link_libraries(test_fang PRIVATE fang fang_run assert const msis_ifc msis00mod)
 add_test(NAME unit:fangIonize COMMAND $<TARGET_FILE:test_fang>)
 set_tests_properties(unit:fangIonize PROPERTIES
 TIMEOUT 10
