reorganize advection source code

--- a/src/numerical/CMakeLists.txt
+++ b/src/numerical/CMakeLists.txt
@@ -12,8 +12,10 @@ add_subdirectory(calculus)
 
 add_subdirectory(diffusion)
 
-add_library(advec OBJECT advection/advec_mpi.f90)
-target_link_libraries(advec PRIVATE const mpimod grid meshobj)
+add_library(advec OBJECT advection/advec.f90)
+target_link_libraries(advec PRIVATE const grid meshobj)
+add_library(advec_mpi OBJECT advection/advec_mpi.f90)
+target_link_libraries(advec_mpi PRIVATE const mpimod grid meshobj)
 
 add_subdirectory(potential)
 
