--- a/src/sources/CMakeLists.txt
+++ b/src/sources/CMakeLists.txt
@@ -1,2 +1,4 @@
-add_library(sources OBJECT sources.f90 sources_mpi.f90)
-target_link_libraries(sources PRIVATE calculus collision const grid meshobj mpimod)
+add_library(sources OBJECT sources.f90)
+target_link_libraries(sources PRIVATE calculus collision const grid meshobj)
+add_library(sources_mpi OBJECT sources_mpi.f90)
+target_link_libraries(sources_mpi PRIVATE mpimod)
