reorg sources module

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -60,7 +60,7 @@ multifluid
 neutral
 pathlib
 PDEparabolic gbsv
-precipBCs reader sanity_check errors sources temporal timeutils
+precipBCs reader sanity_check errors sources sources_mpi temporal timeutils
 exe_frontend
 grid io
 PDEelliptic potential mumps_interface
