separate mpi and inputdata

--- a/src/inputdata/CMakeLists.txt
+++ b/src/inputdata/CMakeLists.txt
@@ -4,7 +4,7 @@ add_library(inputdata OBJECT inputdataobj.f90)
 target_link_libraries(inputdata PRIVATE const config meshobj meshobj_dipole interp timeutils)
 
 add_library(precipdata OBJECT precipdataobj.f90)
-target_link_libraries(precipdata PRIVATE const config meshobj interp timeutils mpimod inputdata MPI::MPI_Fortran)
+target_link_libraries(precipdata PRIVATE const config meshobj interp timeutils inputdata MPI::MPI_Fortran)
 
 add_library(efielddata OBJECT efielddataobj.f90)
 target_link_libraries(efielddata PRIVATE const config grid meshobj interp timeutils inputdata)
@@ -13,16 +13,16 @@ add_library(neutraldata OBJECT neutraldataobj.f90)
 target_link_libraries(neutraldata PRIVATE const inputdata)
 
 add_library(neutraldata2D OBJECT neutraldata2Dobj.f90)
-target_link_libraries(neutraldata2D PRIVATE const config grid meshobj interp timeutils neutraldata inputdata MPI::MPI_Fortran h5fortran::h5fortran)
+target_link_libraries(neutraldata2D PRIVATE const config grid meshobj interp timeutils neutraldata inputdata h5fortran::h5fortran)
 
 add_library(neutraldata2Daxisymm OBJECT neutraldata2Daxisymmobj.f90)
-target_link_libraries(neutraldata2Daxisymm PRIVATE const config grid meshobj interp timeutils neutraldata neutraldata2D inputdata MPI::MPI_Fortran h5fortran::h5fortran)
+target_link_libraries(neutraldata2Daxisymm PRIVATE const config grid meshobj interp timeutils neutraldata neutraldata2D inputdata h5fortran::h5fortran)
 target_compile_options(neutraldata2Daxisymm PRIVATE ${gfortran_opts})
 
 add_library(neutraldata2Dcart OBJECT neutraldata2Dcartobj.f90)
-target_link_libraries(neutraldata2Dcart PRIVATE const config grid meshobj interp timeutils neutraldata neutraldata2D inputdata MPI::MPI_Fortran h5fortran::h5fortran)
+target_link_libraries(neutraldata2Dcart PRIVATE const config grid meshobj interp timeutils neutraldata neutraldata2D inputdata h5fortran::h5fortran)
 target_compile_options(neutraldata2Dcart PRIVATE ${gfortran_opts})
 
-add_library(neutraldata3D OBJECT neutraldata3Dobj.f90 neuslab.f90)
-target_link_libraries(neutraldata3D PRIVATE const config grid meshobj interp timeutils neutraldata inputdata MPI::MPI_Fortran h5fortran::h5fortran)
-target_compile_options(neutraldata3D PRIVATE ${gfortran_opts})
+add_library(neutraldata3D_mpi OBJECT neutraldata3Dobj_mpi.f90 neuslab_mpi.f90)
+target_link_libraries(neutraldata3D_mpi PRIVATE const config grid meshobj interp timeutils neutraldata inputdata MPI::MPI_Fortran h5fortran::h5fortran)
+target_compile_options(neutraldata3D_mpi PRIVATE ${gfortran_opts})
