--- a/src/inputdata/CMakeLists.txt
+++ b/src/inputdata/CMakeLists.txt
@@ -13,16 +13,16 @@ add_library(neutraldata OBJECT neutraldataobj.f90)
 target_link_libraries(neutraldata PRIVATE const inputdata)
 
 add_library(neutraldata2D OBJECT neutraldata2Dobj.f90)
-target_link_libraries(neutraldata2D PRIVATE const config grid meshobj interp timeutils neutraldata inputdata h5fortran::h5fortran)
+target_link_libraries(neutraldata2D PRIVATE const config grid meshobj interp timeutils neutraldata inputdata reader h5fortran::h5fortran)
 
 add_library(neutraldata2Daxisymm OBJECT neutraldata2Daxisymmobj.f90)
-target_link_libraries(neutraldata2Daxisymm PRIVATE const config grid meshobj interp timeutils neutraldata neutraldata2D inputdata h5fortran::h5fortran)
+target_link_libraries(neutraldata2Daxisymm PRIVATE const config grid meshobj interp timeutils neutraldata neutraldata2D inputdata reader h5fortran::h5fortran)
 target_compile_options(neutraldata2Daxisymm PRIVATE ${gfortran_opts})
 
 add_library(neutraldata2Dcart OBJECT neutraldata2Dcartobj.f90)
-target_link_libraries(neutraldata2Dcart PRIVATE const config grid meshobj interp timeutils neutraldata neutraldata2D inputdata h5fortran::h5fortran)
+target_link_libraries(neutraldata2Dcart PRIVATE const config grid meshobj interp timeutils neutraldata neutraldata2D inputdata reader h5fortran::h5fortran)
 target_compile_options(neutraldata2Dcart PRIVATE ${gfortran_opts})
 
 add_library(neutraldata3D_mpi OBJECT neutraldata3Dobj_mpi.f90 neuslab_mpi.f90)
-target_link_libraries(neutraldata3D_mpi PRIVATE const config grid meshobj interp timeutils neutraldata inputdata MPI::MPI_Fortran h5fortran::h5fortran)
+target_link_libraries(neutraldata3D_mpi PRIVATE const config grid meshobj interp timeutils neutraldata inputdata reader MPI::MPI_Fortran h5fortran::h5fortran)
 target_compile_options(neutraldata3D_mpi PRIVATE ${gfortran_opts})
