--- a/src/numerical/grid/CMakeLists.txt
+++ b/src/numerical/grid/CMakeLists.txt
@@ -1,7 +1,12 @@
-add_library(grid OBJECT grid.f90 read.f90 check.f90
-readgrid_hdf5.f90 readgrid_nc4.f90 readgrid_raw.f90)
-target_compile_options(grid PRIVATE ${gfortran_opts})
-target_link_libraries(grid PRIVATE const reader meshobj meshobj_cart meshobj_dipole mpimod
+add_library(grid OBJECT grid.f90 readgrid_hdf5.f90 readgrid_nc4.f90 readgrid_raw.f90)
+target_link_libraries(grid PRIVATE const
+h5fortran::h5fortran nc4fortran::nc4fortran
+$<$<BOOL:${HDF5_HAVE_PARALLEL}>:MPI::MPI_Fortran>
+)
+
+add_library(grid_mpi OBJECT grid_mpi.f90 read_mpi.f90 check_mpi.f90)
+target_compile_options(grid_mpi PRIVATE ${gfortran_opts})
+target_link_libraries(grid_mpi PRIVATE const reader grid meshobj meshobj_cart meshobj_dipole mpimod
 h5fortran::h5fortran nc4fortran::nc4fortran
 $<$<BOOL:${HDF5_HAVE_PARALLEL}>:MPI::MPI_Fortran>
 )
