--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -16,7 +16,10 @@ $<TARGET_OBJECTS:meshobj> $<TARGET_OBJECTS:meshobj_cart> $<TARGET_OBJECTS:meshob
 $<TARGET_OBJECTS:reader> $<TARGET_OBJECTS:io>
 )
 target_link_libraries(magcalc.bin PRIVATE exe_frontend
-pathlib sanity_check errors config timeutils const hwloc_ifc hwloc_c nc4fortran::nc4fortran h5fortran::h5fortran
+sanity_check errors config timeutils const
+hwloc_ifc hwloc_c
+nc4fortran::nc4fortran h5fortran::h5fortran
+FortranPathlib::pathlib
 )
 target_link_libraries(magcalc.bin PRIVATE MPI::MPI_Fortran
 $<$<NOT:$<BOOL:${mpi}>>:MUMPS::MPISEQ>
@@ -50,14 +53,18 @@ INPUT ${CMAKE_CURRENT_BINARY_DIR}/exe_frontend.f90.in
 )
 
 add_library(exe_frontend OBJECT ${CMAKE_CURRENT_BINARY_DIR}/exe_frontend.f90)
-target_link_libraries(exe_frontend PRIVATE config hwloc_ifc hwloc_c timeutils pathlib const)
+target_link_libraries(exe_frontend PRIVATE config hwloc_ifc hwloc_c timeutils const
+FortranPathlib::pathlib
+)
 
 # --- gemini3d.run
 add_executable(gemini3d.run gemini3d_run.f90 $<TARGET_OBJECTS:exe_frontend>)
-target_link_libraries(gemini3d.run PRIVATE const config timeutils autogrid reader pathlib
-h5fortran::h5fortran nc4fortran::nc4fortran hwloc_ifc hwloc_c
+target_link_libraries(gemini3d.run PRIVATE const config timeutils autogrid reader
+h5fortran::h5fortran nc4fortran::nc4fortran
+hwloc_ifc hwloc_c
 $<$<BOOL:${HWLOC_FOUND}>:HWLOC::HWLOC>
 $<$<BOOL:${HDF5_HAVE_PARALLEL}>:MPI::MPI_Fortran>
+FortranPathlib::pathlib
 )
 
 add_test(NAME unit:gemini3d_run_ok COMMAND $<TARGET_FILE:gemini3d.run>)
@@ -69,10 +76,11 @@ TIMEOUT 10
 
 # --- magcalc.run
 add_executable(magcalc.run magcalc_run.f90)
-target_link_libraries(magcalc.run PRIVATE exe_frontend autogrid reader config timeutils pathlib const hwloc_ifc hwloc_c
+target_link_libraries(magcalc.run PRIVATE exe_frontend autogrid reader config timeutils const hwloc_ifc hwloc_c
 h5fortran::h5fortran nc4fortran::nc4fortran
 $<$<BOOL:${HWLOC_FOUND}>:HWLOC::HWLOC>
 $<$<BOOL:${HDF5_HAVE_PARALLEL}>:MPI::MPI_Fortran>
+FortranPathlib::pathlib
 )
 
 add_test(NAME unit:magcalc_run_ok COMMAND $<TARGET_FILE:magcalc.run>)
@@ -98,9 +106,10 @@ ${CMAKE_CURRENT_SOURCE_DIR}/../io/compare_grid_h5.f90
 ${CMAKE_CURRENT_SOURCE_DIR}/../io/compare_out_h5.f90
 ${CMAKE_CURRENT_SOURCE_DIR}/../io/compare_in_h5.f90
 )
-target_link_libraries(gemini3d.compare PRIVATE assert config reader pathlib timeutils const
+target_link_libraries(gemini3d.compare PRIVATE assert config reader timeutils const
 nc4fortran::nc4fortran h5fortran::h5fortran
 $<$<BOOL:${HDF5_HAVE_PARALLEL}>:MPI::MPI_Fortran>
+FortranPathlib::pathlib
 )
 
 set_property(TARGET gemini3d.run gemini3d.compare magcalc.bin magcalc.run
