--- a/src/neutral/CMakeLists.txt
+++ b/src/neutral/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_library(neutral OBJECT neutral.f90 atmos.f90 wind.f90)
 target_compile_options(neutral PRIVATE ${gfortran_opts})
-target_link_libraries(neutral PRIVATE config const reader pathlib grid meshobj interp mpimod
+target_link_libraries(neutral PRIVATE config const reader grid meshobj interp mpimod
 hwm_ifc
 msis_ifc
 timeutils
@@ -8,6 +8,7 @@ inputdata neutraldata neutraldata3D
 neutraldata2D neutraldata2Dcart neutraldata2Daxisymm
 h5fortran::h5fortran
 MPI::MPI_Fortran
+FortranPathlib::pathlib
 )
 
 # self-tests
@@ -20,8 +21,9 @@ $<TARGET_OBJECTS:neutral> $<TARGET_OBJECTS:interp>
 target_include_directories(test_proj PRIVATE ${PROJECT_BINARY_DIR}/include)
 target_link_libraries(test_proj PRIVATE config const reader inputdata
 neutraldata neutraldata3D neutraldata2D neutraldata2Dcart neutraldata2Daxisymm
-timeutils pathlib mpimod const
+timeutils mpimod const
 hwm_ifc
 msis_ifc msis00mod
 MPI::MPI_Fortran
+FortranPathlib::pathlib
 )
