--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -63,7 +63,7 @@ inputdata precipdata efielddata
 #neutraldata neutraldata3D_mpi neutraldata2D neutraldata2Daxisymm neutraldata2Dcart
 meshobj meshobj_cart meshobj_dipole spherical newton geomagnetic
 multifluid
-#neutral
+neutral
 pathlib
 PDEparabolic gbsv
 precipBCs reader sanity_check errors sources timeutils
@@ -92,7 +92,7 @@ neutraldata neutraldata3D_mpi neutraldata2D neutraldata2Daxisymm neutraldata2Dca
 meshobj meshobj_cart meshobj_dipole spherical newton geomagnetic
 multifluid
 multifluid_mpi
-neutral
+neutral_perturbations
 pathlib
 PDEparabolic gbsv
 precipBCs reader sanity_check errors sources sources_mpi temporal timeutils
@@ -159,6 +159,7 @@ io
 ionization_mpi
 multifluid_mpi
 neutral
+neutral_perturbations
 neutraldata neutraldata3D_mpi neutraldata2D neutraldata2Daxisymm neutraldata2Dcart
 potential
 sources_mpi
