--- a/src/neutral/CMakeLists.txt
+++ b/src/neutral/CMakeLists.txt
@@ -1,6 +1,15 @@
 add_library(neutral OBJECT neutral.f90 atmos.f90 wind.f90)
 target_compile_options(neutral PRIVATE ${gfortran_opts})
-target_link_libraries(neutral PRIVATE config const reader pathlib grid meshobj interp mpimod
+target_link_libraries(neutral PRIVATE config const reader pathlib grid meshobj interp
+hwm_ifc
+msis_ifc
+timeutils
+h5fortran::h5fortran
+)
+
+add_library(neutral_perturbations OBJECT neutral_perturbations.f90)
+target_compile_options(neutral_perturbations PRIVATE ${gfortran_opts})
+target_link_libraries(neutral_perturbations PRIVATE config const reader pathlib grid meshobj interp mpimod
 hwm_ifc
 msis_ifc
 timeutils
